--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
       - backups:/backups
       - ./schema/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: ["CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres"]
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
       interval: 10s
       timeout: 30s
       retries: 5
