--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ FLASK_RUN_PORT=1234
 # PGAdmin
 PGADMIN_DEFAULT_EMAIL=group77@dis.com
 PGADMIN_DEFAULT_PASSWORD=dis2024
+# DM
+LOCALE_PATH=src/locale
+SCHEMA_PATH=schema/schema.json
