--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
 
   web:
     container_name: ${WEB}
+    image:  "dis-web:dev"
     build:
       context: .
       dockerfile: .docker/flask.Dockerfile
