ADD: made some minor changes

--- a/.env
+++ b/.env
@@ -11,9 +11,10 @@ WEB=flask
 FLASK_DEBUG=true 
 FLASK_RUN_HOST=0.0.0.0
 FLASK_RUN_PORT=1234
+FLASK_SECRET_PATH=src/.secrets/flask-key
 # PGAdmin
 PGADMIN_DEFAULT_EMAIL=group77@dis.com
 PGADMIN_DEFAULT_PASSWORD=dis2024
 # DM
-LOCALE_PATH=src/locale
+LOCALE_PATH=locale
 SCHEMA_PATH=schema/schema.json
