FEAT: run the app dockerless

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ WEB=flask
 FLASK_DEBUG=true 
 FLASK_RUN_HOST=0.0.0.0
 FLASK_RUN_PORT=1234
-FLASK_SECRET_PATH=src/.secrets/flask-key
+FLASK_SECRET_PATH=src/secrets/flask-key
 # PGAdmin
 PGADMIN_DEFAULT_EMAIL=group77@dis.com
 PGADMIN_DEFAULT_PASSWORD=dis2024
