--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 # secrets
 datamanager/secrets/api-key
 src/secrets/flask-key
+src/static/css/groupsid.css
+src/static/css/groupsid.css
+src/templates/groupsid.html
